--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@
       <button class="error__button">Попробовать снова</button>
     </div>
   </template>
-<script src="js/main.js"></script>
+<script src="js/pins.js"></script>
+<script src="js/cards.js"></script>
+<script src="js/map.js"></script>
 </body>
 </html>
