--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </div>
   </template>
 <script src="js/pins.js"></script>
-<script src="js/cards.js"></script>
+<!--<script src="js/cards.js"></script> -->
 <script src="js/map.js"></script>
 </body>
 </html>
