--- a/index.html
+++ b/index.html
@@ -250,5 +250,6 @@
 <script src="js/pins.js"></script>
 <!--<script src="js/cards.js"></script> -->
 <script src="js/map.js"></script>
+<script src="js/validity.js"></script>
 </body>
 </html>
