--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
     </div>
   </template>
 <script src="js/pins.js"></script>
+<script src="js/move.js"></script>
 <script src="js/cards.js"></script>
 <script src="js/map.js"></script>
 <script src="js/popup.js"></script>
