Добавил черновую фильтрацию

--- a/index.html
+++ b/index.html
@@ -254,5 +254,6 @@
   <script src="js/map.js"></script>
   <script src="js/move.js"></script>
   <script src="js/validity.js"></script>
+  <script src="js/filter.js"></script>
 </body>
 </html>
