--- a/index.html
+++ b/index.html
@@ -251,9 +251,10 @@
   <script src="js/pins.js"></script>
   <script src="js/popup.js"></script>
   <script src="js/cards.js"></script>
+  <script src="js/validity.js"></script>
   <script src="js/map.js"></script>
   <script src="js/move.js"></script>
-  <script src="js/validity.js"></script>
-  <script src="js/filter.js"></script>
+
+  <!--<script src="js/filter.js"></script>-->
 </body>
 </html>
