--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
       <button class="error__button">Попробовать снова</button>
     </div>
   </template>
+  <script src="js/debounce.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/pins.js"></script>
   <script src="js/popup.js"></script>
@@ -254,7 +255,6 @@
   <script src="js/validity.js"></script>
   <script src="js/map.js"></script>
   <script src="js/move.js"></script>
-
-  <!--<script src="js/filter.js"></script>-->
+  <script src="js/filter.js"></script>
 </body>
 </html>
